--- a/Recipe.tex
+++ b/Recipe.tex
@@ -31,8 +31,8 @@ Reference: \url{https://m.xiachufang.com/recipe/104038857/}.
 
 Ingredients: 
 \begin{itemize}
-    \item \chn{排骨，生抽，白糖，料酒，生姜，香叶，桂皮}
-    \item Pork ribs, (light) soy sauce, white sugar, cooking wine, ginger, bay leaves, cinnamon stick \footnote{Bay leaves and cinnamon sticks can be substituted with other spices.}
+    \item \chn{排骨 （500g，2至3人份），生抽，白糖，料酒，生姜，香叶，桂皮}
+    \item Pork ribs (500g for 2-3), (light) soy sauce, white sugar, cooking wine, ginger, bay leaves, cinnamon stick \footnote{Bay leaves and cinnamon sticks can be substituted with other spices.}
 \end{itemize}
 
 \begin{paracol}{2}
@@ -67,5 +67,7 @@ Ingredients:
     \end{enumerate}
 \end{paracol}
 \section{\chn{虾仁滑蛋} Shrimp with Scrambled Eggs}
+Reference: \url{https://www.youtube.com/watch?v=UB25StsHNXU}
 
+Ingredients: 
 \end{document}
