虾仁滑蛋 上传

--- a/Recipe.tex
+++ b/Recipe.tex
@@ -53,14 +53,12 @@ Ingredients:
         Once boiling, rinse the ribs under cold water to clean them thoroughly.
         \item Prepare a few slices of ginger, one bay leaf, and a piece of cinnamon stick. 
         Soak them in water to make spiced water for later use.
-        \item Caramelizing sugar \footnote{This step is to give the dish a rich, reddish glaze. If you don't aim for this effect, you can skip this step and add dark soy sauce later as a substitute.}: 
+        \item Caramelizing sugar\footnote{This step is to give the dish a rich, reddish glaze. If you don't aim for this effect, you can skip this step and add dark soy sauce later as a substitute.}: 
         Add oil and 2 tablespoons of white sugar to a pan. 
         Cook over medium-low heat for about 2 minutes, stirring in one direction until the sugar turns into a yellow, foamy texture.
         \item Add the pork ribs to the caramelized sugar and stir-fry until they are coated with the sugar syrup. 
         Then add the spiced water (including the spices).
-        \item Add an appropriate amount
-        \footnote{For reference: 500g of pork ribs can be seasoned with 3 teaspoons of light soy sauce and 2 teaspoons of cooking wine. 
-        If you're concerned about the dish being too salty, start with a smaller amount of soy sauce, and add more during the simmering process if the flavor is too bland.} 
+        \item Add an appropriate amount\footnote{For reference: 500g of pork ribs can be seasoned with 3 teaspoons of light soy sauce and 2 teaspoons of cooking wine. If you're concerned about the dish being too salty, start with a smaller amount of soy sauce, and add more during the simmering process if the flavor is too bland.} 
         of light soy sauce and cooking wine. 
         Cover the pot and simmer over medium-low heat for about 30 minutes.
         \item When the sauce has reduced to a thick consistency, stir-fry the pork ribs to coat them with the sauce.
@@ -70,4 +68,37 @@ Ingredients:
 Reference: \url{https://www.youtube.com/watch?v=UB25StsHNXU}
 
 Ingredients: 
+\begin{itemize}
+    \item \chn{鲜虾（500g, 2人份）或冷冻虾仁，鸡蛋（4-5个），白胡椒粉，盐，料酒，淀粉，葱}
+    \item Fresh or frozen shrimp (500g for 2-3), eggs (4-5), white pepper, salt, cooking wine, starch, green onions
+\end{itemize}
+\begin{paracol}{2}
+    \begin{itemize}
+        \item \chn{鲜虾去壳去虾线。虾仁加少量盐和白胡椒给底味，抓匀。加入少量料酒去腥，以及少量淀粉锁水，抓匀。}
+        \item \chn{鸡蛋打入碗中，加少量盐和白胡椒之后打散。如果想让鸡蛋更滑嫩，可以加入少量牛奶或水淀粉。}
+        \item \chn{热锅三四成油温，下入虾仁。使虾仁间相互分开防止粘连。转动锅让油流动，让虾肉均匀受热，直到变色定型再推散。}
+        \item \chn{将虾仁捞出放入蛋液里，锅内留少量底油。}
+        \item \chn{把蛋液和虾仁同时下入锅中，用铲子慢慢地推动蛋液，尽量不要使其变为焦黄色，让蛋液尽可能包裹虾仁。}
+        \item \chn{当大部分蛋液凝固，还有少量液体时，关火用余温再加热几秒。装盘并用葱花点缀。}
+    \end{itemize}
+    \switchcolumn
+    \begin{itemize}
+        \item Peel and devein\footnote{Removing the vein is a matter of personal preference and taste, not hygiene. It's not harmful to eat.} the shrimp. 
+        Season the shrimp with a small amount of salt and white pepper, then mix well. 
+        Add a little cooking wine to remove the fishy smell and some starch to retain the moisture of the shrimp, then mix evenly. 
+        \item Crack the eggs into a bowl, add some salt and white pepper, then whisk well.
+        To make the eggs smoother and more tender, you can add a little milk or cornstarch slurry.
+        \item Heat the oil to 90-120 $^{\circ}$C and add the shrimp. 
+        Separate the shrimp to prevent them from sticking together. 
+        Swirl the pan to move the oil around, ensuring even cooking.
+        Once the shrimp turn pink and firm up, gently stir them.
+        \item Remove the shrimp and place them into the egg mixture. Leave some oil in the pan.
+        \item Pour the egg mixture together with shrimp into the pan. 
+        Gently stir and push the eggs with a spatula, avoiding browning. 
+        Try to coat the shrimp with the egg as much as possible.
+        \item When most of the egg mixture has set but some liquid remains,
+        turn off the heat and let the residual heat cook it for a few more seconds.
+        Plate the dish and garnish with chopped green onions.
+    \end{itemize}
+\end{paracol}
 \end{document}
